# zkArcade

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package-lock.json  package.json
arcade/: .env.example  README.md  package-lock.json  package.json
arcade/src/: config.ts
battleship-frontend/: package.json  tsconfig.json  vite.config.ts
battleship-frontend/src/: App.tsx  config.ts  index.css  react-router-dom.d.ts  snarkjs.d.ts
circuits/: README.md  battleship.circom  battleship_utils.circom  board_commit.circom  example_input_resolve_guess.json  example_input_resolve_shot.json  resolve_guess.circom  resolve_shot.circom  word_commit.circom  wordle_utils.circom
contracts/battleship/: README.md
contracts/battleship-verifier-adapter/: Cargo.toml  README.md
contracts/circom-groth16-verifier/: Cargo.toml
contracts/mock-game-hub/: Cargo.toml
contracts/wordle/: Cargo.toml  README.md
contracts/wordle-verifier-adapter/: Cargo.toml  README.md
docs/: index.html
docs/assets/: index-BR71mpJN.js  index-DBmxh_BC.css
scripts/: bindings.ts  build.ts  circuits-build.ts  circuits-prove-resolve-guess.ts  circuits-ptau.ts  circuits-setup-vkey-wordle.ts  circuits-setup-vkey.ts  circuits-vkey-to-soroban.ts  deploy-battleship-chain.ts  deploy.ts  dev-game.ts  setup.ts
sgs_frontend/src/: index.css
wordle-frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
wordle-frontend/public/: game-studio-config.js
wordle-frontend/src/: App.tsx  bindings.ts  circom_runtime.d.ts  config.ts  index.css  main.tsx  (+1 more)
(+93 files in other folders)
